fixed shadowing, colors, alignments on mac

--- a/less/button.less
+++ b/less/button.less
@@ -56,7 +56,7 @@ span.browserButton,
     font-size: 0px;
     width: 24px;
     height: 100%;
-    opacity: 0.5;
+    opacity: 0.65;
     background: url('../img/icon_new_frame.svg') 50% 20% scroll / 20px no-repeat;
     &:hover {
       opacity: 0.8;
