--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -337,7 +337,7 @@
 // Styles had to be reworked to properly position the new caption buttons for Windows
 .navbarCaptionButtonContainer {
   display: flex;
-  border-bottom: 1px solid #aaaaaa;
+  border-bottom: 1px solid #bbb;
 
   &.allowDragging {
     -webkit-app-region: drag;
